# cmesh

./: CMakeLists.txt  conandata.yml
cmesh/mesh/: boolean.cpp  boolean.h  compute_normals_sm.cpp  compute_normals_sm.h  find_union_intersect.h  meshMeshing.h  meshgeneration.cpp  meshgeneration.h  meshmeshing.cpp  meshwrapper.cpp  meshwrapper.h  roof.cpp  roof.h  simplify.cpp  simplify.h
igl/: CMakeLists.txt
igl/cmake/igl/modules/: embree.cmake
igl/igl/: min_quad_with_fixed.5.cpp
igl/igl/copyleft/: CMakeLists.txt  marching_cubes.cpp  marching_cubes.h  progressive_hulls.h  quadprog.h
igl/igl/copyleft/cgal/: assign_scalar.h
igl/include/igl/copyleft/cgal/: SelfIntersectMesh.h  propagate_winding_numbers.cpp  remesh_intersections.cpp
impl/: adduvs.cpp  boolean.cpp  cboolean.cpp  cboolean.h  cconversion.cpp  cconversion.h  cholefill.cpp  cholefill.h  ctype.h  pedestal.cpp  repair.cpp  repairNew.cpp  repairNew.h  richmesh.cpp  richmeshimpl.cpp  richmeshimpl.h  roof.cpp  tmeshutil.cpp  tmeshutil.h
impl/cache/: find_union_intersect.cpp
impl/cgal/: subrepair.cpp  subrepair.h  subrepairmenu.cpp
impl/igl/: booleanigl.cpp  str.cpp
impl/mmesh/: algrithm3d.cpp  createcylinder.cpp  dumplicate.h  meshtopo.cpp  mnode.cpp  mnode.h  polygon.cpp  polygon2util.cpp  polygonstack.cpp  trimeshutil.cpp
include/cmesh/: interface.h
include/cmesh/cgal/: subrepair.h  subrepairmenu.h  subrepairtype.h
include/cmesh/igl/: booleanigl.h  str.h
include/cmesh/mesh/: boolean.h  pedestal.h  repair.h  richmesh.h
include/cmesh/uvs/: adduvs.h
