set (SRCS	igl/AABB.cpp
		igl/AABB.h
		igl/accumarray.cpp
		igl/accumarray.h
		igl/active_set.cpp
		igl/active_set.h
		igl/adjacency_list.cpp
		igl/adjacency_list.h
		igl/adjacency_matrix.cpp
		igl/adjacency_matrix.h
		igl/all.cpp
		igl/all.h
		igl/all_pairs_distances.cpp
		igl/all_pairs_distances.h
		igl/ambient_occlusion.cpp
		igl/ambient_occlusion.h
		igl/angular_distance.cpp
		igl/angular_distance.h
		igl/any.cpp
		igl/any.h
		igl/any_of.cpp
		igl/any_of.h
		igl/arap.cpp
		igl/arap.h
		igl/ARAPEnergyType.h
		igl/arap_dof.cpp
		igl/arap_dof.h
		igl/arap_linear_block.cpp
		igl/arap_linear_block.h
		igl/arap_rhs.cpp
		igl/arap_rhs.h
		igl/AtA_cached.cpp
		igl/AtA_cached.h
		igl/average_from_edges_onto_vertices.cpp
		igl/average_from_edges_onto_vertices.h
		igl/average_onto_faces.cpp
		igl/average_onto_faces.h
		igl/average_onto_vertices.cpp
		igl/average_onto_vertices.h
		igl/avg_edge_length.cpp
		igl/avg_edge_length.h
		igl/axis_angle_to_quat.cpp
		igl/axis_angle_to_quat.h
		igl/barycenter.cpp
		igl/barycenter.h
		igl/barycentric_coordinates.cpp
		igl/barycentric_coordinates.h
		igl/barycentric_interpolation.cpp
		igl/barycentric_interpolation.h
		igl/basename.cpp
		igl/basename.h
		igl/bbw.cpp
		igl/bbw.h
		igl/bezier.cpp
		igl/bezier.h
		igl/bfs.cpp
		igl/bfs.h
		igl/bfs_orient.cpp
		igl/bfs_orient.h
		igl/biharmonic_coordinates.cpp
		igl/biharmonic_coordinates.h
		igl/bijective_composite_harmonic_mapping.cpp
		igl/bijective_composite_harmonic_mapping.h
		igl/blkdiag.cpp
		igl/blkdiag.h
		igl/blue_noise.cpp
		igl/blue_noise.h
		igl/bone_parents.cpp
		igl/bone_parents.h
		igl/boundary_conditions.cpp
		igl/boundary_conditions.h
		igl/boundary_facets.cpp
		igl/boundary_facets.h
		igl/boundary_loop.cpp
		igl/boundary_loop.h
		igl/bounding_box.cpp
		igl/bounding_box.h
		igl/bounding_box_diagonal.cpp
		igl/bounding_box_diagonal.h
		igl/Camera.h
		igl/canonical_quaternions.cpp
		igl/canonical_quaternions.h
		igl/cat.cpp
		igl/cat.h
		igl/ceil.cpp
		igl/ceil.h
		igl/centroid.cpp
		igl/centroid.h
		igl/circulation.cpp
		igl/circulation.h
		igl/circumradius.cpp
		igl/circumradius.h
		igl/collapse_edge.cpp
		igl/collapse_edge.h
		igl/collapse_small_triangles.cpp
		igl/collapse_small_triangles.h
		igl/colon.cpp
		igl/colon.h
		igl/colormap.cpp
		igl/colormap.h
		igl/columnize.cpp
		igl/columnize.h
		igl/column_to_quats.cpp
		igl/column_to_quats.h
		igl/combine.cpp
		igl/combine.h
		igl/comb_cross_field.cpp
		igl/comb_cross_field.h
		igl/comb_frame_field.cpp
		igl/comb_frame_field.h
		igl/comb_line_field.cpp
		igl/comb_line_field.h
		igl/compute_frame_field_bisectors.cpp
		igl/compute_frame_field_bisectors.h
		igl/connected_components.cpp
		igl/connected_components.h
		igl/connect_boundary_to_infinity.cpp
		igl/connect_boundary_to_infinity.h
		igl/cotmatrix.cpp
		igl/cotmatrix.h
		igl/cotmatrix_entries.cpp
		igl/cotmatrix_entries.h
		igl/cotmatrix_intrinsic.cpp
		igl/cotmatrix_intrinsic.h
		igl/count.cpp
		igl/count.h
		igl/covariance_scatter_matrix.cpp
		igl/covariance_scatter_matrix.h
		igl/cross.cpp
		igl/cross.h
		igl/cross_field_mismatch.cpp
		igl/cross_field_mismatch.h
		igl/crouzeix_raviart_cotmatrix.cpp
		igl/crouzeix_raviart_cotmatrix.h
		igl/crouzeix_raviart_massmatrix.cpp
		igl/crouzeix_raviart_massmatrix.h
		igl/cr_vector_curvature_correction.cpp
		igl/cr_vector_curvature_correction.h
		igl/cr_vector_laplacian.cpp
		igl/cr_vector_laplacian.h
		igl/cr_vector_mass.cpp
		igl/cr_vector_mass.h
		igl/cumprod.cpp
		igl/cumprod.h
		igl/cumsum.cpp
		igl/cumsum.h
		igl/curved_hessian_energy.cpp
		igl/curved_hessian_energy.h
		igl/cut_mesh.cpp
		igl/cut_mesh.h
		igl/cut_mesh_from_singularities.cpp
		igl/cut_mesh_from_singularities.h
		igl/cut_to_disk.cpp
		igl/cut_to_disk.h
		igl/cylinder.cpp
		igl/cylinder.h
		igl/C_STR.h
		igl/dated_copy.cpp
		igl/dated_copy.h
		igl/decimate.cpp
		igl/decimate.h
		igl/decimate_callback_types.h
		igl/decimate_trivial_callbacks.cpp
		igl/decimate_trivial_callbacks.h
		igl/default_num_threads.cpp
		igl/default_num_threads.h
		igl/deform_skeleton.cpp
		igl/deform_skeleton.h
		igl/delaunay_triangulation.cpp
		igl/delaunay_triangulation.h
		igl/deprecated.h
		igl/dfs.cpp
		igl/dfs.h
		igl/diag.cpp
		igl/diag.h
		igl/dihedral_angles.cpp
		igl/dihedral_angles.h
		igl/dijkstra.cpp
		igl/dijkstra.h
		igl/directed_edge_orientations.cpp
		igl/directed_edge_orientations.h
		igl/directed_edge_parents.cpp
		igl/directed_edge_parents.h
		igl/direct_delta_mush.cpp
		igl/direct_delta_mush.h
		igl/dirname.cpp
		igl/dirname.h
		igl/dot.cpp
		igl/dot.h
		igl/dot_row.cpp
		igl/dot_row.h
		igl/doublearea.cpp
		igl/doublearea.h
		igl/dqs.cpp
		igl/dqs.h
		igl/dual_contouring.cpp
		igl/dual_contouring.h
		igl/ears.cpp
		igl/ears.h
		igl/edges.cpp
		igl/edges.h
		igl/edges_to_path.cpp
		igl/edges_to_path.h
		igl/edge_collapse_is_valid.cpp
		igl/edge_collapse_is_valid.h
		igl/edge_exists_near.cpp
		igl/edge_exists_near.h
		igl/edge_flaps.cpp
		igl/edge_flaps.h
		igl/edge_lengths.cpp
		igl/edge_lengths.h
		igl/edge_midpoints.cpp
		igl/edge_midpoints.h
		igl/edge_topology.cpp
		igl/edge_topology.h
		igl/edge_vectors.cpp
		igl/edge_vectors.h
		igl/eigs.cpp
		igl/eigs.h
		igl/EPS.cpp
		igl/EPS.h
		igl/euler_characteristic.cpp
		igl/euler_characteristic.h
		igl/exact_geodesic.cpp
		igl/exact_geodesic.h
		igl/example_fun.cpp
		igl/example_fun.h
		igl/exploded_view.cpp
		igl/exploded_view.h
		igl/extension.cpp
		igl/extension.h
		igl/exterior_edges.cpp
		igl/exterior_edges.h
		igl/extract_manifold_patches.cpp
		igl/extract_manifold_patches.h
		igl/extract_non_manifold_edge_curves.cpp
		igl/extract_non_manifold_edge_curves.h
		igl/faces_first.cpp
		igl/faces_first.h
		igl/facet_adjacency_matrix.cpp
		igl/facet_adjacency_matrix.h
		igl/facet_components.cpp
		igl/facet_components.h
		igl/face_areas.cpp
		igl/face_areas.h
		igl/face_occurrences.cpp
		igl/face_occurrences.h
		igl/false_barycentric_subdivision.cpp
		igl/false_barycentric_subdivision.h
		igl/FastWindingNumberForSoups.h
		igl/fast_winding_number.cpp
		igl/fast_winding_number.h
		igl/FileEncoding.h
		igl/FileMemoryStream.h
		igl/file_contents_as_string.cpp
		igl/file_contents_as_string.h
		igl/file_dialog_open.cpp
		igl/file_dialog_open.h
		igl/file_dialog_save.cpp
		igl/file_dialog_save.h
		igl/file_exists.cpp
		igl/file_exists.h
		igl/find.cpp
		igl/find.h
		igl/find_cross_field_singularities.cpp
		igl/find_cross_field_singularities.h
		igl/find_zero.cpp
		igl/find_zero.h
		igl/fit_cubic_bezier.cpp
		igl/fit_cubic_bezier.h
		igl/fit_plane.cpp
		igl/fit_plane.h
		igl/fit_rotations.cpp
		igl/fit_rotations.h
		igl/flipped_triangles.cpp
		igl/flipped_triangles.h
		igl/flip_avoiding_line_search.cpp
		igl/flip_avoiding_line_search.h
		igl/flip_edge.cpp
		igl/flip_edge.h
		igl/flood_fill.cpp
		igl/flood_fill.h
		igl/floor.cpp
		igl/floor.h
		igl/forward_kinematics.cpp
		igl/forward_kinematics.h
		igl/for_each.h
		igl/frame_field_deformer.cpp
		igl/frame_field_deformer.h
		igl/frame_to_cross_field.cpp
		igl/frame_to_cross_field.h
		igl/frustum.cpp
		igl/frustum.h
		igl/gaussian_curvature.cpp
		igl/gaussian_curvature.h
		igl/get_seconds.cpp
		igl/get_seconds.h
		igl/get_seconds_hires.cpp
		igl/get_seconds_hires.h
		igl/grad.cpp
		igl/grad.h
		igl/grad_intrinsic.cpp
		igl/grad_intrinsic.h
		igl/grid.cpp
		igl/grid.h
		igl/grid_search.cpp
		igl/grid_search.h
		igl/group_sum_matrix.cpp
		igl/group_sum_matrix.h
		igl/guess_extension.cpp
		igl/guess_extension.h
		igl/HalfEdgeIterator.cpp
		igl/HalfEdgeIterator.h
		igl/harmonic.cpp
		igl/harmonic.h
		igl/harwell_boeing.cpp
		igl/harwell_boeing.h
		igl/hausdorff.cpp
		igl/hausdorff.h
		igl/heat_geodesics.cpp
		igl/heat_geodesics.h
		igl/hessian.cpp
		igl/hessian.h
		igl/hessian_energy.cpp
		igl/hessian_energy.h
		igl/histc.cpp
		igl/histc.h
		igl/Hit.h
		igl/hsv_to_rgb.cpp
		igl/hsv_to_rgb.h
		igl/igl_inline.h
		igl/IndexComparison.h
		igl/infinite_cost_stopping_condition.cpp
		igl/infinite_cost_stopping_condition.h
		igl/inradius.cpp
		igl/inradius.h
		igl/internal_angles.cpp
		igl/internal_angles.h
		igl/intersect.cpp
		igl/intersect.h
		igl/intrinsic_delaunay_cotmatrix.cpp
		igl/intrinsic_delaunay_cotmatrix.h
		igl/intrinsic_delaunay_triangulation.cpp
		igl/intrinsic_delaunay_triangulation.h
		igl/invert_diag.cpp
		igl/invert_diag.h
		igl/in_element.cpp
		igl/in_element.h
		igl/IO
		igl/isdiag.cpp
		igl/isdiag.h
		igl/ismember.cpp
		igl/ismember.h
		igl/ismember_rows.cpp
		igl/ismember_rows.h
		igl/isolines.cpp
		igl/isolines.h
		igl/isolines_map.cpp
		igl/isolines_map.h
		igl/is_border_vertex.cpp
		igl/is_border_vertex.h
		igl/is_boundary_edge.cpp
		igl/is_boundary_edge.h
		igl/is_delaunay.cpp
		igl/is_delaunay.h
		igl/is_dir.cpp
		igl/is_dir.h
		igl/is_edge_manifold.cpp
		igl/is_edge_manifold.h
		igl/is_file.cpp
		igl/is_file.h
		igl/is_intrinsic_delaunay.cpp
		igl/is_intrinsic_delaunay.h
		igl/is_irregular_vertex.cpp
		igl/is_irregular_vertex.h
		igl/is_planar.cpp
		igl/is_planar.h
		igl/is_readable.cpp
		igl/is_readable.h
		igl/is_sparse.cpp
		igl/is_sparse.h
		igl/is_stl.cpp
		igl/is_stl.h
		igl/is_symmetric.cpp
		igl/is_symmetric.h
		igl/is_vertex_manifold.cpp
		igl/is_vertex_manifold.h
		igl/is_writable.cpp
		igl/is_writable.h
		igl/iterative_closest_point.cpp
		igl/iterative_closest_point.h
		igl/jet.cpp
		igl/jet.h
		igl/kelvinlets.cpp
		igl/kelvinlets.h
		igl/kkt_inverse.cpp
		igl/kkt_inverse.h
		igl/knn.cpp
		igl/knn.h
		igl/launch_medit.cpp
		igl/launch_medit.h
		igl/lbs_matrix.cpp
		igl/lbs_matrix.h
		igl/lexicographic_triangulation.cpp
		igl/lexicographic_triangulation.h
		igl/limit_faces.cpp
		igl/limit_faces.h
		igl/line_field_mismatch.cpp
		igl/line_field_mismatch.h
		igl/line_search.cpp
		igl/line_search.h
		igl/line_segment_in_rectangle.cpp
		igl/line_segment_in_rectangle.h
		igl/linprog.cpp
		igl/linprog.h
		igl/LinSpaced.h
		igl/list_to_matrix.cpp
		igl/list_to_matrix.h
		igl/local_basis.cpp
		igl/local_basis.h
		igl/look_at.cpp
		igl/look_at.h
		igl/loop.cpp
		igl/loop.h
		igl/lscm.cpp
		igl/lscm.h
		igl/MappingEnergyType.h
		igl/mapping_energy_with_jacobians.cpp
		igl/mapping_energy_with_jacobians.h
		igl/map_vertices_to_circle.cpp
		igl/map_vertices_to_circle.h
		igl/marching_cubes.cpp
		igl/marching_cubes.h
		igl/marching_cubes_tables.h
		igl/marching_tets.cpp
		igl/marching_tets.h
		igl/march_cube.cpp
		igl/march_cube.h
		igl/massmatrix.cpp
		igl/massmatrix.h
		igl/massmatrix_intrinsic.cpp
		igl/massmatrix_intrinsic.h
		igl/material_colors.h
		igl/matlab_format.cpp
		igl/matlab_format.h
		igl/matrix_to_list.cpp
		igl/matrix_to_list.h
		igl/mat_max.cpp
		igl/mat_max.h
		igl/mat_min.cpp
		igl/mat_min.h
		igl/mat_to_quat.cpp
		igl/mat_to_quat.h
		igl/max.cpp
		igl/max.h
		igl/max_faces_stopping_condition.cpp
		igl/max_faces_stopping_condition.h
		igl/max_size.cpp
		igl/max_size.h
		igl/median.cpp
		igl/median.h
		igl/MeshBooleanType.h
		igl/min.cpp
		igl/min.h
		igl/min_heap.h
		igl/min_quad_with_fixed.1.cpp
		igl/min_quad_with_fixed.2.cpp
		igl/min_quad_with_fixed.3.cpp
		igl/min_quad_with_fixed.4.cpp
		igl/min_quad_with_fixed.5.cpp
		igl/min_quad_with_fixed.6.cpp
		igl/min_quad_with_fixed.7.cpp
		igl/min_quad_with_fixed.8.cpp
		igl/min_quad_with_fixed.h
		igl/min_quad_with_fixed.impl.h
		igl/min_quad_with_fixed_precompute.cpp
		igl/min_quad_with_fixed_solve.cpp
		igl/min_size.cpp
		igl/min_size.h
		igl/mod.cpp
		igl/mod.h
		igl/mode.cpp
		igl/mode.h
		igl/moments.cpp
		igl/moments.h
		igl/MshLoader.cpp
		igl/MshLoader.h
		igl/MshSaver.cpp
		igl/MshSaver.h
		igl/mvc.cpp
		igl/mvc.h
		igl/nchoosek.cpp
		igl/nchoosek.h
		igl/next_filename.cpp
		igl/next_filename.h
		igl/normalize_quat.cpp
		igl/normalize_quat.h
		igl/normalize_row_lengths.cpp
		igl/normalize_row_lengths.h
		igl/normalize_row_sums.cpp
		igl/normalize_row_sums.h
		igl/NormalType.h
		igl/normal_derivative.cpp
		igl/normal_derivative.h
		igl/null.cpp
		igl/null.h
		igl/octree.cpp
		igl/octree.h
		igl/offset_surface.cpp
		igl/offset_surface.h
		igl/ONE.h
		igl/on_boundary.cpp
		igl/on_boundary.h
		igl/orientable_patches.cpp
		igl/orientable_patches.h
		igl/oriented_facets.cpp
		igl/oriented_facets.h
		igl/orient_halfedges.cpp
		igl/orient_halfedges.h
		igl/orient_outward.cpp
		igl/orient_outward.h
		igl/orth.cpp
		igl/orth.h
		igl/ortho.cpp
		igl/ortho.h
		igl/outer_element.cpp
		igl/outer_element.h
		igl/parallel_for.h
		igl/parallel_transport_angles.cpp
		igl/parallel_transport_angles.h
		igl/partition.cpp
		igl/partition.h
		igl/parula.cpp
		igl/parula.h
		igl/pathinfo.cpp
		igl/pathinfo.h
		igl/path_to_edges.cpp
		igl/path_to_edges.h
		igl/path_to_executable.cpp
		igl/path_to_executable.h
		igl/per_corner_normals.cpp
		igl/per_corner_normals.h
		igl/per_edge_normals.cpp
		igl/per_edge_normals.h
		igl/per_face_normals.cpp
		igl/per_face_normals.h
		igl/per_vertex_attribute_smoothing.cpp
		igl/per_vertex_attribute_smoothing.h
		igl/per_vertex_normals.cpp
		igl/per_vertex_normals.h
		igl/per_vertex_point_to_plane_quadrics.cpp
		igl/per_vertex_point_to_plane_quadrics.h
		igl/PI.h
		igl/piecewise_constant_winding_number.cpp
		igl/piecewise_constant_winding_number.h
		igl/pinv.cpp
		igl/pinv.h
		igl/planarize_quad_mesh.cpp
		igl/planarize_quad_mesh.h
		igl/point_in_circle.cpp
		igl/point_in_circle.h
		igl/point_mesh_squared_distance.cpp
		igl/point_mesh_squared_distance.h
		igl/point_simplex_squared_distance.cpp
		igl/point_simplex_squared_distance.h
		igl/polar_dec.cpp
		igl/polar_dec.h
		igl/polar_svd.cpp
		igl/polar_svd.h
		igl/polar_svd3x3.cpp
		igl/polar_svd3x3.h
		igl/polygons_to_triangles.cpp
		igl/polygons_to_triangles.h
		igl/polygon_corners.cpp
		igl/polygon_corners.h
		igl/principal_curvature.cpp
		igl/principal_curvature.h
		igl/print_ijv.cpp
		igl/print_ijv.h
		igl/print_vector.cpp
		igl/print_vector.h
		igl/procrustes.cpp
		igl/procrustes.h
		igl/project.cpp
		igl/project.h
		igl/projection_constraint.cpp
		igl/projection_constraint.h
		igl/project_isometrically_to_plane.cpp
		igl/project_isometrically_to_plane.h
		igl/project_to_line.cpp
		igl/project_to_line.h
		igl/project_to_line_segment.cpp
		igl/project_to_line_segment.h
		igl/pseudonormal_test.cpp
		igl/pseudonormal_test.h
		igl/pso.cpp
		igl/pso.h
		igl/qslim.cpp
		igl/qslim.h
		igl/qslim_optimal_collapse_edge_callbacks.cpp
		igl/qslim_optimal_collapse_edge_callbacks.h
		igl/quadprog.cpp
		igl/quadprog.h
		igl/quadric_binary_plus_operator.cpp
		igl/quadric_binary_plus_operator.h
		igl/quad_grid.cpp
		igl/quad_grid.h
		igl/quad_planarity.cpp
		igl/quad_planarity.h
		igl/quats_to_column.cpp
		igl/quats_to_column.h
		igl/quat_conjugate.cpp
		igl/quat_conjugate.h
		igl/quat_mult.cpp
		igl/quat_mult.h
		igl/quat_to_axis_angle.cpp
		igl/quat_to_axis_angle.h
		igl/quat_to_mat.cpp
		igl/quat_to_mat.h
		igl/ramer_douglas_peucker.cpp
		igl/ramer_douglas_peucker.h
		igl/random_dir.cpp
		igl/random_dir.h
		igl/random_points_on_mesh.cpp
		igl/random_points_on_mesh.h
		igl/random_quaternion.cpp
		igl/random_quaternion.h
		igl/random_search.cpp
		igl/random_search.h
		igl/randperm.cpp
		igl/randperm.h
		igl/raytri.c
		igl/ray_box_intersect.cpp
		igl/ray_box_intersect.h
		igl/ray_mesh_intersect.cpp
		igl/ray_mesh_intersect.h
		igl/ray_sphere_intersect.cpp
		igl/ray_sphere_intersect.h
		igl/readBF.cpp
		igl/readBF.h
		igl/readCSV.cpp
		igl/readCSV.h
		igl/readDMAT.cpp
		igl/readDMAT.h
		igl/readMESH.cpp
		igl/readMESH.h
		igl/readMSH.cpp
		igl/readMSH.h
		igl/readNODE.cpp
		igl/readNODE.h
		igl/readOBJ.cpp
		igl/readOBJ.h
		igl/readOFF.cpp
		igl/readOFF.h
		igl/readPLY.cpp
		igl/readPLY.h
		igl/readSTL.cpp
		igl/readSTL.h
		igl/readTGF.cpp
		igl/readTGF.h
		igl/readWRL.cpp
		igl/readWRL.h
		igl/read_file_binary.cpp
		igl/read_file_binary.h
		igl/read_triangle_mesh.cpp
		igl/read_triangle_mesh.h
		igl/REDRUM.h
		igl/redux.h
		igl/remesh_along_isoline.cpp
		igl/remesh_along_isoline.h
		igl/remove_duplicate_vertices.cpp
		igl/remove_duplicate_vertices.h
		igl/remove_unreferenced.cpp
		igl/remove_unreferenced.h
		igl/reorder.cpp
		igl/reorder.h
		igl/repdiag.cpp
		igl/repdiag.h
		igl/repmat.cpp
		igl/repmat.h
		igl/resolve_duplicated_faces.cpp
		igl/resolve_duplicated_faces.h
		igl/rgb_to_hsv.cpp
		igl/rgb_to_hsv.h
		igl/rigid_alignment.cpp
		igl/rigid_alignment.h
		igl/rotate_by_quat.cpp
		igl/rotate_by_quat.h
		igl/rotate_vectors.cpp
		igl/rotate_vectors.h
		igl/rotation_matrix_from_directions.cpp
		igl/rotation_matrix_from_directions.h
		igl/round.cpp
		igl/round.h
		igl/rows_to_matrix.cpp
		igl/rows_to_matrix.h
		igl/sample_edges.cpp
		igl/sample_edges.h
		igl/scalar_to_cr_vector_gradient.cpp
		igl/scalar_to_cr_vector_gradient.h
		igl/screen_space_selection.cpp
		igl/screen_space_selection.h
		igl/seam_edges.cpp
		igl/seam_edges.h
		igl/segment_segment_intersect.cpp
		igl/segment_segment_intersect.h
		igl/serialize.h
		igl/setdiff.cpp
		igl/setdiff.h
		igl/setunion.cpp
		igl/setunion.h
		igl/setxor.cpp
		igl/setxor.h
		igl/shapeup.cpp
		igl/shapeup.h
		igl/shape_diameter_function.cpp
		igl/shape_diameter_function.h
		igl/sharp_edges.cpp
		igl/sharp_edges.h
		igl/shortest_edge_and_midpoint.cpp
		igl/shortest_edge_and_midpoint.h
		igl/signed_angle.cpp
		igl/signed_angle.h
		igl/signed_distance.cpp
		igl/signed_distance.h
		igl/simplify_polyhedron.cpp
		igl/simplify_polyhedron.h
		igl/Singular_Value_Decomposition_Givens_QR_Factorization_Kernel.hpp
		igl/Singular_Value_Decomposition_Jacobi_Conjugation_Kernel.hpp
		igl/Singular_Value_Decomposition_Kernel_Declarations.hpp
		igl/Singular_Value_Decomposition_Main_Kernel_Body.hpp
		igl/Singular_Value_Decomposition_Preamble.hpp
		igl/slice.cpp
		igl/slice.h
		igl/slice_cached.cpp
		igl/slice_cached.h
		igl/slice_into.cpp
		igl/slice_into.h
		igl/slice_mask.cpp
		igl/slice_mask.h
		igl/slice_sorted.cpp
		igl/slice_sorted.h
		igl/slim.cpp
		igl/slim.h
		igl/smooth_corner_adjacency.cpp
		igl/smooth_corner_adjacency.h
		igl/snap_points.cpp
		igl/snap_points.h
		igl/snap_to_canonical_view_quat.cpp
		igl/snap_to_canonical_view_quat.h
		igl/snap_to_fixed_up.cpp
		igl/snap_to_fixed_up.h
		igl/solid_angle.cpp
		igl/solid_angle.h
		igl/SolverStatus.h
		igl/sort.cpp
		igl/sort.h
		igl/SortableRow.h
		igl/sortrows.cpp
		igl/sortrows.h
		igl/sort_angles.cpp
		igl/sort_angles.h
		igl/sort_triangles.cpp
		igl/sort_triangles.h
		igl/sort_vectors_ccw.cpp
		igl/sort_vectors_ccw.h
		igl/sparse.cpp
		igl/sparse.h
		igl/sparse_cached.cpp
		igl/sparse_cached.h
		igl/sparse_voxel_grid.cpp
		igl/sparse_voxel_grid.h
		igl/speye.cpp
		igl/speye.h
		igl/split_nonmanifold.cpp
		igl/split_nonmanifold.h
		igl/squared_edge_lengths.cpp
		igl/squared_edge_lengths.h
		igl/stdin_to_temp.cpp
		igl/stdin_to_temp.h
		igl/STR.h
		igl/straighten_seams.cpp
		igl/straighten_seams.h
		igl/string_utils.cpp
		igl/string_utils.h
		igl/sum.cpp
		igl/sum.h
		igl/svd3x3.cpp
		igl/svd3x3.h
		igl/svd3x3_avx.cpp
		igl/svd3x3_avx.h
		igl/svd3x3_sse.cpp
		igl/svd3x3_sse.h
		igl/swept_volume.cpp
		igl/swept_volume.h
		igl/swept_volume_bounding_box.cpp
		igl/swept_volume_bounding_box.h
		igl/swept_volume_signed_distance.cpp
		igl/swept_volume_signed_distance.h
		igl/tan_half_angle.cpp
		igl/tan_half_angle.h
		igl/tetrahedralized_grid.cpp
		igl/tetrahedralized_grid.h
		igl/tet_tet_adjacency.cpp
		igl/tet_tet_adjacency.h
		igl/Timer.h
		igl/tinyply.cpp
		igl/tinyply.h
		igl/topological_hole_fill.cpp
		igl/topological_hole_fill.h
		igl/trackball.cpp
		igl/trackball.h
		igl/transpose_blocks.cpp
		igl/transpose_blocks.h
		igl/triangles_from_strip.cpp
		igl/triangles_from_strip.h
		igl/triangle_fan.cpp
		igl/triangle_fan.h
		igl/triangle_triangle_adjacency.cpp
		igl/triangle_triangle_adjacency.h
		igl/triangulated_grid.cpp
		igl/triangulated_grid.h
		igl/two_axis_valuator_fixed_up.cpp
		igl/two_axis_valuator_fixed_up.h
		igl/uniformly_sample_two_manifold.cpp
		igl/uniformly_sample_two_manifold.h
		igl/unique.cpp
		igl/unique.h
		igl/unique_edge_map.cpp
		igl/unique_edge_map.h
		igl/unique_rows.cpp
		igl/unique_rows.h
		igl/unique_simplices.cpp
		igl/unique_simplices.h
		igl/unproject.cpp
		igl/unproject.h
		igl/unproject_in_mesh.cpp
		igl/unproject_in_mesh.h
		igl/unproject_onto_mesh.cpp
		igl/unproject_onto_mesh.h
		igl/unproject_on_line.cpp
		igl/unproject_on_line.h
		igl/unproject_on_plane.cpp
		igl/unproject_on_plane.h
		igl/unproject_ray.cpp
		igl/unproject_ray.h
		igl/unzip_corners.cpp
		igl/unzip_corners.h
		igl/upsample.cpp
		igl/upsample.h
		igl/vector_area_matrix.cpp
		igl/vector_area_matrix.h
		igl/verbose.h
		igl/vertex_components.cpp
		igl/vertex_components.h
		igl/vertex_triangle_adjacency.cpp
		igl/vertex_triangle_adjacency.h
		igl/Viewport.h
		igl/volume.cpp
		igl/volume.h
		igl/voxel_grid.cpp
		igl/voxel_grid.h
		igl/WindingNumberAABB.h
		igl/WindingNumberMethod.h
		igl/WindingNumberTree.h
		igl/winding_number.cpp
		igl/winding_number.h
		igl/writeBF.cpp
		igl/writeBF.h
		igl/writeDMAT.cpp
		igl/writeDMAT.h
		igl/writeMESH.cpp
		igl/writeMESH.h
		igl/writeMSH.cpp
		igl/writeMSH.h
		igl/writeOBJ.cpp
		igl/writeOBJ.h
		igl/writeOFF.cpp
		igl/writeOFF.h
		igl/writePLY.cpp
		igl/writePLY.h
		igl/writeSTL.cpp
		igl/writeSTL.h
		igl/writeTGF.cpp
		igl/writeTGF.h
		igl/writeWRL.cpp
		igl/writeWRL.h
		igl/write_triangle_mesh.cpp
		igl/write_triangle_mesh.h
		igl/ZERO.h
		
	)
	
if(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
	MESSAGE("CMAKE_CXX_FLAGS SET bigobj ${CMAKE_CXX_FLAGS}")
endif()
if(WIN32)
       list(APPEND EXTRALIBS psapi.lib)
else()
       list(APPEND EXTRALIBS pthread)
endif()

set(LIBS ${EXTRALIBS})
set(INCS ${EIGEN_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/igl)
set(DEFS IGL_STATIC_LIBRARY EIGEN_NO_STATIC_ASSERT)
	
__add_real_target(igl lib SOURCE ${SRCS} LIB ${LIBS} INC ${INCS} DEF ${DEFS} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})	

add_subdirectory(igl/copyleft)





